<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AllMatchParent"
    tools:context="com.droid.backupphone.activity.sms.SmsSyncActivity">

    <android.support.design.widget.AppBarLayout
        style="@style/MatchParentWrapContent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        style="@style/AllMatchParent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            style="@style/AppTheme.Card.Margins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/MatchParentWrapContent"
                android:orientation="vertical"
                android:padding="10dip">

                <TextView
                    style="@style/TextBigBoldMatchWrap"
                    android:text="@string/sms_feature1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    style="@style/TextBigBoldMatchWrap"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/msg_phone_sms"/>

                <Button
                    android:id="@+id/btn_phone_sms"
                    style="@style/BtnStyle"
                    android:text="@string/phone_sms"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/AppTheme.Card.Margins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large">

            <LinearLayout
                style="@style/MatchParentWrapContent"
                android:orientation="vertical"
                android:padding="10dip">

                <TextView
                    style="@style/TextBigBoldMatchWrap"
                    android:text="@string/sms_feature2"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    style="@style/TextBigBoldMatchWrap"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/msg_cloud_sms"/>

                <Button
                    android:id="@+id/btn_cloud_sms"
                    style="@style/BtnStyle"
                    android:text="@string/cloud_sms"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
