<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/AllMatchParent"
        tools:context="com.droid.backupphone.activity.login.ForgetPasswordActivity">


    <include
            android:id="@+id/view_update_progress"
            layout="@layout/loading_progress_view"
            android:visibility="gone"/>

    <LinearLayout

            android:layout_margin="16dp"
            android:id="@+id/view_forget_parent"
            style="@style/MatchParentWrapContent"
            android:orientation="vertical">


        <TextView
                style="@style/AllWrapContent"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/lable_update_password"
                android:textColor="@color/bg_main"
                android:textSize="20dp"/>

        <TextView
                style="@style/AllWrapContent"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/update_password_msg"
                android:textColor="@color/bg_main"
                android:textSize="14dp"/>


        <android.support.v7.widget.CardView
                style="@style/AppTheme.Card.Margins"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

            <LinearLayout
                    style="@style/MatchParentWrapContent"
                    android:orientation="vertical"
                    android:padding="10dip">

                <TextView
                        style="@style/TextBigBoldMatchWrap"
                        android:text="@string/current_email"
                        android:textColor="@color/colorPrimary"/>

                <TextView
                        android:id="@+id/tv_current_user_name"
                        style="@style/MatchParentWrapContent"
                        android:textColor="@color/lbl_name"
                        android:textSize="14dp"
                        android:text="TextView"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="5dp"
                style="@style/MatchParentWrapContent">

            <AutoCompleteTextView
                    android:id="@+id/actv_newpassword"
                    style="@style/MatchParentWrapContent"
                    android:hint="@string/update_prompt_password"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>


        <Button
                android:id="@+id/btn_update_password"
                style="@style/BtnStyle"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/action_update_password"
                android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
