<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AllMatchParent"
    tools:context="com.droid.backupphone.activity.login.SignUpActvity">

    <android.support.design.widget.AppBarLayout
        style="@style/MatchParentWrapContent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/view_signup_progress"
        layout="@layout/loading_progress_view"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/view_signup_parent"
        style="@style/AllMatchParent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/MatchParentWrapContent"
            android:orientation="vertical">

            <TextView
                    style="@style/AllWrapContent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/signup_msg"
                    android:textColor="@color/bg_main"
                    android:textSize="14dp" />

            <android.support.design.widget.TextInputLayout
                style="@style/MatchParentWrapContent">

                <AutoCompleteTextView
                    android:id="@+id/actv_email"
                    style="@style/MatchParentWrapContent"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/MatchParentWrapContent">

                <EditText
                    android:id="@+id/et_password"
                    style="@style/MatchParentWrapContent"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLength="@integer/password_max_length"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_create_account"
                style="@style/BtnStyle"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/action_create_account"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
