<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AllMatchParent"
    android:background="@drawable/splash_background_gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        style="@style/AppTheme.Card.Margins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/MatchParentWrapContent"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                style="@style/TextBigBoldMatchWrap"
                android:text="@string/welcome"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tv_user"
                style="@style/MatchParentWrapContent"
                android:text="TextView"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="10dip"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_contact"
            style="@style/AppTheme.Card.Margins"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="5dip"
            android:layout_weight=".5">

            <RelativeLayout
                style="@style/MatchParentWrapContent"
                android:padding="10dip">

                <TextView
                    android:id="@+id/tv_contact"
                    style="@style/DashboardText"
                    android:text="@string/contacts"/>

                <ImageView
                    style="@style/DashboardImage"
                    android:src="@drawable/contact_icon"
                    android:layout_above="@+id/tv_contact"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_sms"
            style="@style/AppTheme.Card.Margins"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dip"
            android:layout_weight=".5">

            <RelativeLayout
                style="@style/MatchParentWrapContent"
                android:padding="10dip">

                <TextView
                    android:id="@+id/tv_sms"
                    style="@style/DashboardText"
                    android:text="@string/sms"/>

                <ImageView
                    style="@style/DashboardImage"
                    android:layout_above="@id/tv_sms"
                    android:src="@drawable/sms_icon"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="5dip"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_photos"
            style="@style/AppTheme.Card.Margins"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="5dip"
            android:layout_weight=".5">

            <RelativeLayout
                style="@style/MatchParentWrapContent"
                android:padding="10dip">

                <TextView
                    android:id="@+id/tv_photos"
                    style="@style/DashboardText"
                    android:text="@string/photos"/>

                <ImageView
                    style="@style/DashboardImage"
                    android:layout_above="@id/tv_photos"
                    android:src="@drawable/photos_icon"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_videos"
            style="@style/AppTheme.Card.Margins"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dip"
            android:layout_weight=".5">

            <RelativeLayout
                style="@style/MatchParentWrapContent"
                android:padding="10dip">

                <TextView
                    android:id="@+id/tv_videos"
                    style="@style/DashboardText"
                    android:text="@string/videos"/>

                <ImageView
                    style="@style/DashboardImage"
                    android:layout_above="@id/tv_videos"
                    android:src="@drawable/video_icon"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>

